# 3DVITA

./: 3DVita.eps  Makefile.win  OpenAL.dev  README.md  index.html  main.cpp  params.json
3DVITA_src/: .gitignore  CMakeLists.txt  StdAfx.h  audioMain.cpp  grabberMain.cpp
3DVITA_src/Segmentation/: CMakeLists.txt  audioEngine.cpp  audioEngine.h  audioObject.cpp  audioObject.h  audiogenerator.cpp  audiogenerator.h  grabber.cpp  grabber.h  segmentation.cpp  segmentation.h
3DVITA_src/audioDemo/: AudioSource.cpp  AudioSource.h  SoundManager.cpp  SoundManager.h
Code/3dvita/: 3DVITA.sln
Code/3dvita/3DVITA/: 3DVITA.vcxproj  3DVITA.vcxproj.filters  desktop.ini  driver.c  driver.h  footsteps.raw  main.cpp
Code/3dvita/3DVITA/Debug/: 3DVITA.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
Code/3dvita/3DVITA/Release/: 3DVITA.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
Code/3dvita/Debug/: 3DVITA.ilk
LinuxDebsOpenAL/: libopenal-data_1.14-4ubuntu1_all.deb  libopenal-dev_1.14-4ubuntu1_amd64.deb  libopenal-dev_1.14-4ubuntu1_i386.deb  libopenal1_1.14-4ubuntu1_amd64.deb  libopenal1_1.14-4ubuntu1_i386.deb
LinuxDebsOpenAL/AeonWave/: aaxconfig-1.1.0.el6.i386-bin.deb  aaxutils-2.2.1.el6.i386-bin.deb  libaax2-2.2.3.el6.i386-bin.deb  libaaxopenal-1.1.20.el6.i386-bin.deb
Literature/: citeulike-386762.bib
